[package]
name = "tp"
version = "0.1.0"
authors = ["Calvin D. Woo <calvin.d.woo@gmail.com>g"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"